--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Thoughts on AI
-description: A practical take on AI applications
+title: NLP Applications
+description: A pragmatic take on natural language processing and its applications
 github_username: lummm
 
 # Email and twitter are optional:
