--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ use_math: true
 google_analytics:
 
 # Everything below here can be ignored, unless you want to change the theme entirely
-# theme: minima
-remote_theme: pages-themes/minimal@v0.2.0
+theme: minima
+# remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
   - jekyll-feed
