--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: NLP Applications
+title: NLP For Humans
 description: A pragmatic take on natural language processing and its applications
 github_username: lummm
 
